--- a/Slideshow/style.css
+++ b/Slideshow/style.css
@@ -20,6 +20,7 @@ body {
   left: 0;
   overflow: hidden;
   opacity: 0;
+  transition: opacity 1.5s;
 }
 .slide-bild {
   width: 100%;
@@ -90,6 +91,7 @@ body {
   user-select: none;
   cursor: pointer;
   opacity: 0.5;
+  transition: opacity 1.5s;
 }
 
 .aktiv {
