--- a/Thailanderleben HP/index.css
+++ b/Thailanderleben HP/index.css
@@ -14,8 +14,9 @@ html {
 }
 
 .start {
-  background-image: url(Koh\ Phi\ Phi\ Boot-min_Th_Icon.jpg);
-  min-height: 55vh;
+  background-image: linear-gradient(transparent 60%, white),
+    url(Koh\ Phi\ Phi\ Boot-min_Th_Icon.jpg);
+  min-height: 48vh;
   min-width: 80vh;
   background-size: cover;
   background-position: center top;
@@ -42,7 +43,7 @@ h2 {
   text-align: center;
   font-size: 35px;
   font-weight: lighter;
-  margin: 5px;
+  margin: 0;
 }
 
 .einleitung {
@@ -121,6 +122,10 @@ nav ul li a {
 }
 
 @media (min-width: 576px) {
+  .wisebanner {
+    width: 10%;
+    margin: 2px auto;
+  }
   .amexbanner {
     display: flex;
     justify-content: space-around;
@@ -133,17 +138,21 @@ nav ul li a {
     float: right;
     padding: 2%;
   }
+  body {
+    width: auto;
+  }
 }
 @media (min-width: 1200px) {
+  .wisebanner {
+    width: 80%;
+    margin: 0px auto;
+  }
   .amexbanner {
-    background: white;
     width: 50%;
     margin: 0px auto;
-    padding: 1.5% 1%;
-    box-shadow: 2px 2px 5px #666666;
   }
   body {
-    background: #fc9709 url(Bilder/hintergrund.jpg) fixed;
+    background: white url(Bilder/hintergrund.jpg) fixed;
     margin: 0;
   }
   li {
@@ -152,5 +161,9 @@ nav ul li a {
     background-repeat: no-repeat;
     background-position: 1.5% center;
     padding-left: 6%;
+  }
+  img {
+    width: 100%;
+    height: 100%;
   }
 }
