--- a/Landingpage/dialoge.css
+++ b/Landingpage/dialoge.css
@@ -10,7 +10,92 @@
 .dialog {
   position: fixed;
   left: 50%;
-  right: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
   background-color: white;
   color: black;
+  border-radius: 8px;
+  box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
+}
+
+#loslegen-dialog {
+  width: 25%;
+}
+
+.dialog-schliessen-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 32px;
+  line-height: 32px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+#loslegen-dialog {
+  background-color: #a39785;
+  box-shadow: inset 0px 0px 10px black, 2px 2px 4px rgba(255, 255, 255, 0.1),
+    8px 8px 16px rgba(255, 255, 255, 0.1);
+  border: 5px solid silver;
+}
+
+#loslegen-dialog .dialog-schliessen-button {
+  color: rgba(255, 255, 255, 0.6);
+}
+#loslegen-dialog form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#loslegen-dialog h3 {
+  margin: 0;
+  color: white;
+  text-align: center;
+  font-size: max(2.5vw, 1em);
+  text-shadow: 0px 0px 4px black;
+}
+
+#loslegen-dialog input {
+  width: 100%;
+  margin: 7px 0;
+  border-radius: 6px;
+  box-sizing: border-box;
+  font-family: inherit;
+  vertical-align: middle;
+}
+#loslegen-dialog .eingabefeld {
+  padding: 14px 16px;
+  font-size: 17px;
+  line-height: 16px;
+  background: #f5f6f7;
+  color: #1c1e21;
+  height: 50px;
+  box-shadow: inset 0px 0px 4px #222;
+}
+
+#loslegen-dialog .eingabefeld:focus-visible {
+  outline: none;
+  border: 2px solid #3a342c;
+}
+
+#loslegen-dialog input[type='submit'] {
+  padding: 0 16px;
+  background-color: #1877f2;
+  border: none;
+  font-size: 25px;
+  color: white;
+  line-height: 48px;
+  font-weight: bold;
+  cursor: pointer;
+  background-image: linear-gradient(#d3cdc5, #3a342c);
+  text-decoration: none;
+  text-shadow: 1px 1px 5px black;
+  box-shadow: inset 0px 0px 10px black;
+  border-radius: 10%/50%;
+  width: 50%;
+  display: inline-block;
+}
+#loslegen-dialog input[type='submit']:hover {
+  box-shadow: inset 0px 0px 10px black, 0px 0px 15px #d3cdc5;
 }
