--- a/Landingpage/dialoge.css
+++ b/Landingpage/dialoge.css
@@ -5,6 +5,8 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  pointer-events: none;
 }
 
 .dialog {
@@ -17,6 +19,14 @@
   color: black;
   border-radius: 8px;
   box-shadow: 8px 8px 16px rgba(255, 255, 255, 0.1);
+  opacity: 0;
+  pointer-events: none;
+}
+
+#body-overlay.sichtbar,
+dialog.sichtbar {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 #loslegen-dialog {
