--- a/Toast/Snackbars/style.css
+++ b/Toast/Snackbars/style.css
@@ -1,6 +1,6 @@
 .toast-behaelter {
   position: fixed;
-  bottom: 0.7%;
+  bottom: 0.75rem;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -11,13 +11,20 @@
   padding: 0.75rem;
   box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.1);
   display: none;
+  margin-top: 0.75rem;
+  transition: 1s;
+  opacity: 0;
 }
 
-.toast-block {
+.toast.block {
   display: block;
 }
 
-/*Optionale Stilinformationen für das Tutorial*/
+.toast.eingeblendet {
+  opacity: 1;
+}
+
+/* Optionale Stilinformationen für das Tutorial */
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
