--- a/Thailanderleben HP/index.css
+++ b/Thailanderleben HP/index.css
@@ -29,7 +29,7 @@ html {
 }
 
 h1 {
-  font-family: 'permanent marker';
+  font-family: "permanent marker";
   color: #ffcc00;
   text-align: center;
   font-size: 65px;
@@ -38,7 +38,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'permanent marker';
+  font-family: "permanent marker";
   color: #727272;
   text-align: center;
   font-size: 35px;
@@ -51,7 +51,7 @@ h2 {
   justify-content: center;
   margin: 1px, 3px;
   padding: 3px, 3px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   text-align: center;
 }
 
@@ -66,8 +66,8 @@ h2 {
 
 .nav-logo {
   background-image: url(thailanderleben.com);
-  margin: 20px;
-  font-size: 30px;
+  margin: 10px;
+  font-size: 10px;
   font-family: sans-serif;
   font-style: italic;
 }
@@ -144,7 +144,7 @@ nav ul li a {
 }
 @media (min-width: 1200px) {
   .wisebanner {
-    width: 80%;
+    width: 50%;
     margin: 0px auto;
   }
   .amexbanner {
