--- a/Thailanderleben HP/index.css
+++ b/Thailanderleben HP/index.css
@@ -54,6 +54,23 @@ h2 {
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
+h3 {
+  font-family: "permanent marker";
+  color: #727272;
+  text-align: center;
+  font-size: 35px;
+  font-weight: lighter;
+  margin: 0;
+}
+
+.merch {
+  display: flex;
+  justify-content: center;
+  margin: 1px, 3px;
+  padding: 3px, 3px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
 
 /*Navigation*/
 
@@ -82,7 +99,7 @@ nav ul li {
   height: 100%;
   padding: 30px;
   list-style-type: none;
-  font-family: poppins;
+  font-family: "poppins";
   font-weight: bold;
   background-color: #727272;
 }
@@ -118,53 +135,21 @@ nav ul li a {
 .thailiebe {
   display: flex;
   justify-content: center;
-  padding: 50px 5px;
-  font-family: poppins;
+  margin: 1px, 3px;
+  padding: 3px, 3px;
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
 }
 
-@media (min-width: 576px) {
-  .wisebanner {
-    width: 10%;
-    margin: 2px auto;
-  }
-  .amexbanner {
-    display: flex;
-    justify-content: space-around;
-  }
-  table {
-    width: 45%;
-    margin: 0;
-  }
-  img {
-    float: right;
-    padding: 2%;
-  }
-  body {
-    width: auto;
-  }
+.socialMedia {
+  color: black;
 }
-@media (min-width: 1200px) {
-  .wisebanner {
-    width: 50%;
-    margin: 0px auto;
-  }
-  .amexbanner {
-    width: 50%;
-    margin: 0px auto;
-  }
-  body {
-    background: white url(Bilder/hintergrund.jpg) fixed;
-    margin: 0;
-  }
-  li {
-    background: #eeeeee url(bilder/pokeball.png);
-    background-size: 3%;
-    background-repeat: no-repeat;
-    background-position: 1.5% center;
-    padding-left: 6%;
-  }
-  img {
-    width: 100%;
-    height: 100%;
-  }
+.amexbanner {
+  display: flex;
+  justify-content: center;
+  margin: 1px, 3px;
+  padding: 3px, 3px;
+
+  text-align: center;
 }
