--- a/CSS Grundlagen/css hintergrundbilder/style.css
+++ b/CSS Grundlagen/css hintergrundbilder/style.css
@@ -3,4 +3,5 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: right center;
+  background-size: cover;
 }
