--- a/CSS Grundlagen/css box/style.css
+++ b/CSS Grundlagen/css box/style.css
@@ -7,7 +7,7 @@ h1 {
   height: 150px;
   box-sizing: border-box;
   padding: 25px 55px 50px 20px;
-  margin: 5px 10px 50px 10px;
+  margin: 5px auto;
 }
 
 h2 {
