--- a/CSS Grundlagen/responsivesv design/style.css
+++ b/CSS Grundlagen/responsivesv design/style.css
@@ -12,3 +12,11 @@
   padding-top: 56.25%;
   position: relative;
 }
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
