--- a/CSS Grundlagen/responsivesv design/style.css
+++ b/CSS Grundlagen/responsivesv design/style.css
@@ -1,16 +1,7 @@
 .seitenverhaeltnis {
   background-color: blue;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.behaelter {
-  width: 100%;
-  padding-top: 56.25%;
-  position: relative;
+  aspect-ratio: 1920 / 1000;
+  width: 75%;
 }
 
 body {
