--- a/Thailanderleben HP/rsnt.css
+++ b/Thailanderleben HP/rsnt.css
@@ -2,11 +2,15 @@
   margin: 0;
   padding: 0;
   font-size: 18px;
+  font-family: "Poppins", sans-serif;
 }
 body {
   background-color: rgb(242, 240, 238);
 }
 
+.thai {
+  font-size: x-large;
+}
 .start {
   background-image: linear-gradient(transparent 80%, rgb(242, 240, 238)),
     url(Koh\ Phi\ Phi\ Boot-min_Th_Icon.jpg);
@@ -37,4 +41,22 @@ h1 {
   padding: 10px;
   font-family: "Poppins", sans-serif;
   text-align: center;
+}
+
+.amexbanner {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px;
+}
+
+.ichliebethailand {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 2px;
+  box-sizing: border-box;
+  width: 15%;
+  position: relative;
+  left: 45%;
 }
