--- a/Thailanderleben HP/rsnt.css
+++ b/Thailanderleben HP/rsnt.css
@@ -29,7 +29,15 @@ h1 {
   font-family: permanent marker;
   color: #ffcc00;
   text-align: center;
-  font-size: 50px;
+  font-size: 55px;
+  font-weight: lighter;
+  margin: 5px;
+}
+
+h2 {
+  font-family: permanent marker;
+  text-align: center;
+  font-size: 32px;
   font-weight: lighter;
   margin: 5px;
 }
@@ -38,7 +46,7 @@ h1 {
   display: flex;
   justify-content: center;
   margin: 5px;
-  padding: 10px;
+  padding: 15px 100px;
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
@@ -59,4 +67,19 @@ h1 {
   width: 15%;
   position: relative;
   left: 45%;
+  margin: 20px;
+}
+
+.reiseTool {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+  padding: 15px 100px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+
+.agodatxtlink {
+  font-weight: bold;
+  text-decoration-color: blue;
 }
