--- a/Thailanderleben HP/index.css
+++ b/Thailanderleben HP/index.css
@@ -50,7 +50,7 @@ h2 {
 .einleitung {
   display: flex;
   justify-content: center;
-  margin: 1px, 3px;
+  margin: 5px;
   padding: 15px, 100px;
   font-family: "Poppins", sans-serif;
   text-align: center;
