--- a/Thailanderleben HP/rsnt.css
+++ b/Thailanderleben HP/rsnt.css
@@ -36,6 +36,7 @@ h1 {
 
 h2 {
   font-family: permanent marker;
+  color: #727272;
   text-align: center;
   font-size: 32px;
   font-weight: lighter;
