--- a/Thailanderleben HP/style2.css
+++ b/Thailanderleben HP/style2.css
@@ -1,8 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 20px;
   font-family: "Poppins", sans-serif;
+  line-height: 1.3;
 }
 body {
   background-color: rgb(242, 240, 238);
@@ -47,7 +48,7 @@ h2 {
   display: flex;
   justify-content: center;
   margin: 5px;
-  padding: 15px 100px;
+  padding: 15px 150px;
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
@@ -75,7 +76,7 @@ h2 {
   display: flex;
   justify-content: center;
   margin: 5px;
-  padding: 15px 100px;
+  padding: 15px 150px;
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
