--- a/Taschenrechner/taschenrechner.css
+++ b/Taschenrechner/taschenrechner.css
@@ -28,6 +28,9 @@ body {
   border-radius: 0.5em;
   padding: 0.5em;
   text-align: end;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 }
 
 #eingabefeld {
@@ -43,19 +46,26 @@ body {
 }
 
 #anzeige:focus-within {
-  outline: 1px solid #606060;
+  outline: 1px solid #ffbd59;
 }
 
 .taste {
-  background-color: #606060;
+  background-color: #707070;
   border: none;
   font-size: 1.2rem;
   font-weight: bold;
   padding: 1em 2em;
   border-radius: 5em;
+  transition: background-color 0.3s;
 }
 
 .taste:hover {
   color: #ffbd59;
   cursor: pointer;
+  background-color: #555555;
+}
+
+#rechenweg_anzeige {
+  line-height: 1.2;
+  height: 1.2em;
 }
