--- a/HTML Table/style.css
+++ b/HTML Table/style.css
@@ -19,3 +19,12 @@ table.content thead tr {
   font-weight: bold;
   text-align: left;
 }
+
+table.content th,
+table.content td {
+  padding: 12px 16px;
+}
+
+table.content tbody tr {
+  border-bottom: 1px solid black;
+}
