--- a/Website erstellen mit Mario/css/style.css
+++ b/Website erstellen mit Mario/css/style.css
@@ -29,3 +29,10 @@
   font-style: normal;
   font-display: swap;
 }
+
+body {
+  font-family: "IBM", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
+}
