--- a/Website erstellen mit Mario/css/style.css
+++ b/Website erstellen mit Mario/css/style.css
@@ -1,31 +1,31 @@
 /* ANCHOR Fonts*/
 @font-face {
-  font-family: "IBM";
-  src: url(../font/IBMPlexMono-Regular.ttf) format("truetype");
+  font-family: 'IBM';
+  src: url(../font/IBMPlexMono-Regular.ttf) format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "IBM";
-  src: url(../font/IBMPlexMono-Italic.ttf) format("truetype");
+  font-family: 'IBM';
+  src: url(../font/IBMPlexMono-Italic.ttf) format('truetype');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "IBM";
-  src: url(../font/IBMPlexMono-ExtraLightItalic.ttf) format("truetype");
+  font-family: 'IBM';
+  src: url(../font/IBMPlexMono-ExtraLightItalic.ttf) format('truetype');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "IBM";
-  src: url(../font/IBMPlexMono-ExtraLight.ttf) format("truetype");
+  font-family: 'IBM';
+  src: url(../font/IBMPlexMono-ExtraLight.ttf) format('truetype');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -39,11 +39,11 @@ body {
   --color-grey: #898989;
   --color-green: #13f270;
   --color-red: #fc1a52;
-  --color-purple: #cb06d6;
+  --color-purple: #c038c8;
   --color-yellow: #c1de04;
   --color-blue: #03bfee;
 
-  --font: "IBM", monospace;
+  --font: 'IBM', monospace;
   --line: 3ch;
   --font-scale: 0.4vw;
 }
@@ -54,11 +54,11 @@ body.invert {
   --color-grey: #6e6e6e;
   --color-green: #1f864a;
   --color-red: #c63140;
-  --color-purple: #9e02e1;
+  --color-purple: #c038c8;
   --color-yellow: #e37e02;
   --color-blue: #0856ef;
 
-  --font: "IBM", monospace;
+  --font: 'IBM', monospace;
   --line: 3ch;
   --font-scale: 0.4vw;
 }
