--- a/CSS Grundlagen/CSS Cards/style.css
+++ b/CSS Grundlagen/CSS Cards/style.css
@@ -5,10 +5,24 @@ h1 {
   color: blue;
 }
 
-.card {
+.card-header {
+  margin-bottom: 1em;
   padding: 5px;
-  background-color: rgb(240, 237, 234);
+  font-size: 30px;
+  color: darkorange;
+  background-color: aquamarine;
+  display: flex;
+  box-shadow: unset;
+}
+
+.card {
+  padding: 1.5rem;
+  background-color: chartreuse;
   color: rgb(62, 61, 62);
-  border-radius: 4.2px;
+  border-radius: 0.5rem;
   border-style: solid;
+}
+
+.card-content {
+  background-color: chartreuse;
 }
